--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
       <div class="row centered grid">
 
         <div class="col-lg-3 col-sm-4 col-xs-6">
+          <a href="https://twitter.com/supersole">
+          <img src="assets/img/supersole.png" alt="Soledad Penadés">
+          <h4>Soledad Penadés</h4></a>
+        </div>
+
+        <div class="col-lg-3 col-sm-4 col-xs-6">
+          <a href="https://twitter.com/cocoafrog">
+          <img src="assets/img/Joachim_Kurz.png" alt="Joachim Kurz">
+          <h4>Joachim Kurz</h4></a>
+        </div>
+
+        <div class="col-lg-3 col-sm-4 col-xs-6">
           <a href="https://twitter.com/bmf">
           <img src="assets/img/bmf.jpg" alt="Mike Lee">
           <h4>Mike Lee</h4></a>
@@ -153,10 +165,6 @@
           <h4>Gwynne Raskind</h4></a>
         </div>
       </div> <!-- row -->
-
-      <div class="row centered mt">
-        <p>And a few more to be announced...</p>
-      </div>
     </div> <!-- container -->
   </div> <!-- speakers -->
 
