updated Joachim Kurz photo

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="col-lg-3 col-sm-4 col-xs-6">
           <a href="https://twitter.com/cocoafrog">
-          <img src="assets/img/Joachim_Kurz.png" alt="Joachim Kurz">
+          <img src="assets/img/Joachim_Kurz.jpg" alt="Joachim Kurz">
           <h4>Joachim Kurz</h4></a>
         </div>
 
