--- a/info.html
+++ b/info.html
@@ -41,6 +41,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
+          <li><a href="timetable.html">Timetable</a></li>
           <li><a href="#">Info</a></li>
           <li><a href="swift.html">Swift Workshop</a></li>
           <li><a href="#f">Contact Us</a></li>
