--- a/timetable.html
+++ b/timetable.html
@@ -40,8 +40,8 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Home</a></li>
-          <li><a href="timetable.html">Timetable</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Timetable</a></li>
           <li><a href="info.html">Info</a></li>
           <li><a href="swift.html">Swift Workshop</a></li>
           <li><a href="#f">Contact Us</a></li>
@@ -77,139 +77,65 @@
     <div class="container">
 
       <div class="row centered">
-        <h1>Speakers</h1>
+        <h1>Timetable</h1>
       </div>
 
       <div class="row centered grid">
+        <div class="day col-sm-6">
+          <h2>Day 1 (October 22)</h2>
+          <div class="session">
+            <span class="times">10:10 to 11:30</span>
+            <span class="speakerName">Mike Lee</span> - <span class="talkTitle">Hard Ideas</span><br/>
+            <span class="speakerName">Kyle Fuller</span> - <span class="talkTitle">Core Data</span>
+          </div>
 
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="https://twitter.com/supersole">
-          <img src="assets/img/supersole.png" alt="Soledad Penadés">
-          <h4>Soledad Penadés</h4></a>
+          <div class="session">
+            <span class="times">12:00 to 13:20</span>
+            <span class="speakerName">Joachim Kurz</span> - <span class="talkTitle">Laziness in Swift</span><br/>
+            <span class="speakerName">Joachim Bengtsson</span> - <span class="talkTitle">Asynchronous Patterns in Swift</span>
+          </div>
+
+          <div class="session">
+            <span class="times">15:00 to 16:20</span>
+            <span class="speakerName">Robin Christopherson</span> - <span class="talkTitle">Technology: The Power and the Promise</span>
+            <span class="speakerName">Pete Steinberger</span> - <span class="talkTitle">TBA</span><br/>
+          </div>
+
+          <div class="session">
+            <span class="times">17:00 to 17:40</span>
+            <span class="speakerName">Gwynne Raskind</span> - <span class="talkTitle">Assembly 101</span>
+          </div>
         </div>
 
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="https://twitter.com/cocoafrog">
-          <img src="assets/img/Joachim_Kurz.jpg" alt="Joachim Kurz">
-          <h4>Joachim Kurz</h4></a>
+        <div class="day col-sm-6">
+          <h2>Day 2 (October 23)</h2>
+          <div class="session">
+            <span class="times">10:10 to 11:30</span>
+            <span class="speakerName">Krzysztof Zabłocki</span> - <span class="talkTitle">Empower your Objective-C</span><br/>
+            <span class="speakerName">Chris Eidhof</span> - <span class="talkTitle">Functional Swift</span>
+          </div>
+
+          <div class="session">
+            <span class="times">12:00 to 13:20</span>
+            <span class="speakerName">Sam Marshall</span> - <span class="talkTitle">Everything is Terrible</span><br/>
+            <span class="speakerName">Matt Galloway</span> - <span class="talkTitle">Character Encoding</span>
+          </div>
+
+          <div class="session">
+            <span class="times">15:00 to 16:00</span>
+            <span class="talkTitle">Lightning Talks</span><br/>
+          </div>
+
+          <div class="session">
+          <span class="times">16:30 to 17:50</span>
+            <span class="speakerName">Michael May</span> - <span class="talkTitle">TBA</span><br/>
+            <span class="speakerName">Soledad Penades</span> - <span class="talkTitle">Embracing Failure</span>
+          </div>
         </div>
 
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="https://twitter.com/bmf">
-          <img src="assets/img/bmf.jpg" alt="Mike Lee">
-          <h4>Mike Lee</h4></a>
-        </div>
-
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="https://twitter.com/dirk_gently">
-          <img src="assets/img/dirk_gently.jpg" alt="Sam Marshall">
-          <h4>Sam Marshall</h4></a>
-        </div>
-
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="https://twitter.com/kylefuller">
-          <img src="assets/img/KyleFuller.jpg" alt="Kyle Fuller">
-          <h4>Kyle Fuller</h4></a>
-        </div>
-
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="https://twitter.com/CoderMay">
-          <img src="assets/img/codermay.png" alt="Michael May">
-          <h4>Michael May</h4></a>
-        </div>
-
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="https://twitter.com/nevyn">
-          <img src="assets/img/nevyn.jpg" alt="Joachim Bengtsson">
-          <h4>Joachim Bengtsson</h4></a>
-        </div>
-
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="http://twitter.com/mattjgalloway">
-          <img src="assets/img/mattjgalloway.jpg" alt="Matt Galloway">
-          <h4>Matt Galloway</h4></a>
-        </div>
-
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="http://twitter.com/chriseidhof">
-          <img src="assets/img/chriseidhof.jpg" alt="Chris Eidhof">
-          <h4>Chris Eidhof</h4></a>
-        </div>
-
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="http://twitter.com/USA2DAY">
-          <img src="assets/img/usa2day.jpeg" alt="Robin Christopherson">
-          <h4>Robin Christopherson</h4></a>
-        </div>
-
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="http://twitter.com/corbett">
-          <img src="assets/img/corbett.jpg" alt="Christine Corbett">
-          <h4>Christine Corbett</h4></a>
-        </div>
-
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="https://twitter.com/merowing_">
-          <img src="assets/img/merowing_.jpg" alt="Krzysztof Zabłocki">
-          <h4>Krzysztof Zabłocki</h4></a>
-        </div>
-
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="http://twitter.com/steipete">
-          <img src="assets/img/steipete.png" alt="Peter Steinberger">
-          <h4>Peter Steinberger</h4></a>
-        </div>
-
-        <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="http://twitter.com/ameaijou">
-          <img src="assets/img/ameaijou.png" alt="Gwynne Raskind">
-          <h4>Gwynne Raskind</h4></a>
-        </div>
-      </div> <!-- row -->
-    </div> <!-- container -->
-  </div> <!-- speakers -->
-
-  <div id="organisers">
-    <div class="container">
-
-      <div class="row centered">
-        <h1>Organisers</h1>
       </div>
-      <div class="row centered grid">
-
-        <div class="col-sm-2 col-sm-offset-1 col-xs-6">
-          <a href="http://twitter.com/dominicfreeston">
-          <img src="assets/img/dominicfreeston.jpeg" alt="Dominic Freeston">
-          <h4>Dominic Freeston</h4></a>
-        </div>
-
-        <div class="col-sm-2 col-xs-6">
-          <a href="https://www.linkedin.com/pub/analisa-plehn/18/b94/5aa">
-          <img src="assets/img/aplehn.png" alt="Analisa Plehn">
-          <h4>Analisa Plehn</h4></a>
-        </div>
-
-        <div class="col-sm-2 col-xs-12">
-          <a href="http://twitter.com/daniel1of1">
-          <img src="assets/img/daniel1of1.png" alt="Daniel Haight">
-          <h4>Daniel Haight</h4></a>
-        </div>
-
-        <div class="col-sm-2 col-xs-6">
-          <a href="http://twitter.com/James_Mayes">
-          <img src="assets/img/James_Mayes.jpg" alt="James Mayes">
-          <h4>James Mayes</h4></a>
-        </div>
-
-        <div class="col-sm-2 col-xs-6">
-          <a href="http://twitter.com/leydon">
-          <img src="assets/img/leydon.jpg" alt="Chris Leydon">
-          <h4>Chris Leydon</h4></a>
-        </div>
-
-      </div> <!-- row -->
-    </div> <!-- container -->
-  </div> <!-- speakers -->
+    </div>
+  </div>
 
   <div id="contact">
     <div class="container">
