--- a/timetable.html
+++ b/timetable.html
@@ -97,13 +97,13 @@
 
           <div class="session">
             <span class="times">15:00 to 16:20</span>
-            <span class="speakerName">Robin Christopherson</span> - <span class="talkTitle">Technology: The Power and the Promise</span>
-            <span class="speakerName">Pete Steinberger</span> - <span class="talkTitle">TBA</span><br/>
+            <span class="speakerName">Robin Christopherson</span> - <span class="talkTitle">Technology: The Power and the Promise</span><br/>
+            <span class="speakerName">Peter Steinberger</span> - <span class="talkTitle">TBA</span>
           </div>
 
           <div class="session">
             <span class="times">17:00 to 17:40</span>
-            <span class="speakerName">Gwynne Raskind</span> - <span class="talkTitle">Assembly 101</span>
+            <span class="speakerName">Gwynne Raskind</span> - <span class="talkTitle">The Why and How of Assembly Language</span>
           </div>
         </div>
 
@@ -128,7 +128,7 @@
 
           <div class="session">
           <span class="times">16:30 to 17:50</span>
-            <span class="speakerName">Michael May</span> - <span class="talkTitle">TBA</span><br/>
+            <span class="speakerName">Michael May</span> - <span class="talkTitle">Monocultural</span><br/>
             <span class="speakerName">Soledad Penades</span> - <span class="talkTitle">Embracing Failure</span>
           </div>
         </div>
