added sam davie's workshop

--- a/hackday.html
+++ b/hackday.html
@@ -43,7 +43,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="info.html">Info</a></li>
           <li><a href="#">Hack Day</a></li>
-          <li><a href="#swift.html">Swift Workshop</a></li>
+          <li><a href="swift.html">Swift Workshop</a></li>
           <li><a href="#f">Contact Us</a></li>
         </ul>
       </div>
@@ -66,6 +66,7 @@
         </div>
         <div class="col-sm-6">
           <p class="blurb">The Hack Day is the third and final day of ⌘R Conf. It's a chance to apply some of the ideas that are bound to be fighting to get out by the end of the conference. You'll also get to work with some of the awesome people you'll meet during the conference.</p>
+          <p>There will be a couple of fairly structured workshops as well as some more freeform hacking challenges.</p>
         </div>
       </div>
     </div><!-- container -->
@@ -89,13 +90,22 @@
     <div class="container">
       <div class="row centered">
         <h1>Sessions</h1>
-        <h2>User Testing</h2>
-        <p></p>
+      </div>
 
-        <h2>Workshops</h2>
-        <p></p>
+      <div class="row centered grid">
+
+        <div class="col-sm-offset-4 col-sm-4">
+          <h2>Adaptive Layout for iOS 8</h2>
+          <a href="https://twitter.com/iwantmyrealname">
+          <img src="assets/img/sam.jpg" alt="Sam Davies">
+          <h4>lead by Sam Davies</h4></a>
+        </div>
 
       </div>
+
+        <div class="row centered">
+          <h4>More to be announced soon</h4>
+        </div>
     </div>
   </div>
 
