--- a/timetable.html
+++ b/timetable.html
@@ -43,6 +43,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="#">Timetable</a></li>
           <li><a href="info.html">Info</a></li>
+          <li><a href="hackday.html">Hack Day</a></li>
           <li><a href="swift.html">Swift Workshop</a></li>
           <li><a href="#f">Contact Us</a></li>
         </ul>
