--- a/swift.html
+++ b/swift.html
@@ -43,7 +43,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="timetable.html">Timetable</a></li>
           <li><a href="info.html">Info</a></li>
-          <li><a href="hackday.html">Hack Day"</a></li>
+          <li><a href="hackday.html">Hack Day</a></li>
           <li><a href="#">Swift Workshop</a></li>
           <li><a href="#f">Contact Us</a></li>
         </ul>
