changed copy at the top of timetable

--- a/timetable.html
+++ b/timetable.html
@@ -66,9 +66,8 @@
 					<img class="iphone-image" src="assets/img/iphone.png" alt="">
 				</div>
         <div class="col-sm-6">
-          <div id='tito-register-form'></div>
-          <script src='https://ti.to/cmdr/cmdrconf.js?version=3' type='text/javascript'></script></script>
-          <p>Both Hero and Standard tickets give you full access to the conference and all related events. Hero tickets are for company-purchased tickets and will allow for the sale of subsidised tickets.</p>
+            <p class="blurb">⌘R Conf is a two-day, single track conference (plus a hack day) for serious iOS and OS X developers, looking to improve as developers, designers, creators and humans. There will be a focus on deep technical understanding, inclusive design and solving the harder problems we face as an industry.</p>
+            <p>Below you will find the timetable for the main conference days. Go to the <a href="hackday.html">Hack Day</a> page for more details on the third and final day of the conference.</p>
         </div>
 			</div>
 		</div><!-- container -->
