--- a/timetable.html
+++ b/timetable.html
@@ -97,12 +97,13 @@
 
           <div class="session">
             <span class="times">15:00 to 16:20</span>
+            <span class="talkTitle">Lightning Talks</span><br/>
             <span class="speakerName">Robin Christopherson</span> - <span class="talkTitle">Technology: The Power and the Promise</span><br/>
-            <span class="speakerName">Peter Steinberger</span> - <span class="talkTitle">TBA</span>
           </div>
 
           <div class="session">
             <span class="times">17:00 to 17:40</span>
+            <span class="speakerName">Peter Steinberger</span> - <span class="talkTitle">TBA</span><br/>
             <span class="speakerName">Gwynne Raskind</span> - <span class="talkTitle">The Why and How of Assembly Language</span>
           </div>
         </div>
@@ -122,13 +123,14 @@
           </div>
 
           <div class="session">
-            <span class="times">15:00 to 16:00</span>
+            <span class="times">15:00 to 16:20</span>
             <span class="talkTitle">Lightning Talks</span><br/>
+            <span class="speakerName">Michael May</span> - <span class="talkTitle">Monocultural</span><br/>
           </div>
 
           <div class="session">
-          <span class="times">16:30 to 17:50</span>
-            <span class="speakerName">Michael May</span> - <span class="talkTitle">Monocultural</span><br/>
+            <span class="times">16:30 to 17:50</span>
+            <span class="speakerName">Christine Corbett</span> - <span class="talkTitle">TBA</span><br/>
             <span class="speakerName">Soledad Penades</span> - <span class="talkTitle">Embracing Failure</span>
           </div>
         </div>
