more details about sam davies on hackday page

--- a/hackday.html
+++ b/hackday.html
@@ -99,7 +99,7 @@
           <h2>Adaptive Layout for iOS 8</h2>
           <a href="https://twitter.com/iwantmyrealname">
           <img src="assets/img/sam.jpg" alt="Sam Davies">
-          <h4>lead by Sam Davies</h4></a>
+          <h4>lead by Sam Davies, Technical Evangelist at ShinobiControls</h4></a>
         </div>
 
       </div>
