changed Corbett to Corbett Moran

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 
         <div class="col-lg-3 col-sm-4 col-xs-6">
           <a href="http://twitter.com/corbett">
-          <img src="assets/img/corbett.jpg" alt="Christine Corbett">
-          <h4>Christine Corbett</h4></a>
+          <img src="assets/img/corbett.jpg" alt="Christine Corbett Moran">
+          <h4>Christine Corbett Moran</h4></a> 
         </div>
 
         <div class="col-lg-3 col-sm-4 col-xs-6">
