--- a/timetable.html
+++ b/timetable.html
@@ -130,7 +130,7 @@
 
           <div class="session">
             <span class="times">16:30 to 17:50</span>
-            <span class="speakerName">Christine Corbett</span> - <span class="talkTitle">TBA</span><br/>
+            <span class="speakerName">Christine Corbett Moran</span> - <span class="talkTitle">TBA</span><br/>
             <span class="speakerName">Soledad Penades</span> - <span class="talkTitle">Embracing Failure</span>
           </div>
         </div>
