Fixed broken image link
The file is `Sam.jpg` rather than `sam.jpg`

--- a/hackday.html
+++ b/hackday.html
@@ -98,7 +98,7 @@
         <div class="col-sm-offset-4 col-sm-4">
           <h2>Adaptive Layout for iOS 8</h2>
           <a href="https://twitter.com/iwantmyrealname">
-          <img src="assets/img/sam.jpg" alt="Sam Davies">
+          <img src="assets/img/Sam.jpg" alt="Sam Davies">
           <h4>lead by Sam Davies, Technical Evangelist at ShinobiControls</h4></a>
         </div>
 
