new title new asset

--- a/timetable.html
+++ b/timetable.html
@@ -119,7 +119,7 @@
           <div class="session">
             <span class="times">12:00 to 13:20</span>
             <span class="speakerName">Sam Marshall</span> - <span class="talkTitle">Everything is Terrible</span><br/>
-            <span class="speakerName">Matt Galloway</span> - <span class="talkTitle">Character Encoding</span>
+            <span class="speakerName">Matt Galloway</span> - <span class="talkTitle">Strings: From 0 to</span> 🐓🍟
           </div>
 
           <div class="session">
