added sponsors to info page

--- a/info.html
+++ b/info.html
@@ -142,8 +142,12 @@
   <div id="sponsors">
     <div class="container">
       <div class="row centered">
-        <h1>Sponsorship</h1>
-        <p>Interested in supporting the iOS and OS X developer community? Sponsor ⌘R Conf!</p><p><a href="mailto:james@cmdrconf.com?subject=Sponsorship" class="btn btn-default btn-lg" role="button">Contact James</a></p>
+        <h1>Sponsors</h1>
+        <p>Thank you to our sponsors</p>
+        <p><img src="assets/img/facebook.png" class="big-sponsor"></p>
+        <p><img src="assets/img/badoo.png" class="big-sponsor"></p>
+        <p><img src="assets/img/lyst.png" class="small-sponsor">
+         <img src="assets/img/shinobi.png" class="small-sponsor"></p>
       </div>
     </div>
   </div>
