replaced nevyn with dimsumthinking

--- a/timetable.html
+++ b/timetable.html
@@ -92,7 +92,7 @@
           <div class="session">
             <span class="times">12:00 to 13:20</span>
             <span class="speakerName">Joachim Kurz</span> - <span class="talkTitle">Laziness in Swift</span><br/>
-            <span class="speakerName">Joachim Bengtsson</span> - <span class="talkTitle">Asynchronous Patterns in Swift</span>
+            <span class="speakerName">Daniel Steinberg</span> - <span class="talkTitle">TBA</span>
           </div>
 
           <div class="session">
