--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
         </div>
 
         <div class="col-lg-3 col-sm-4 col-xs-6">
-          <a href="https://twitter.com/nevyn">
-          <img src="assets/img/nevyn.jpg" alt="Joachim Bengtsson">
-          <h4>Joachim Bengtsson</h4></a>
+          <a href="https://twitter.com/dimsumthinking">
+          <img src="assets/img/danielsteinberg.jpg" alt="Daniel Steinberg">
+          <h4>Daniel Steinberg</h4></a>
         </div>
 
         <div class="col-lg-3 col-sm-4 col-xs-6">
