--- a/timetable.html
+++ b/timetable.html
@@ -86,13 +86,13 @@
           <div class="session">
             <span class="times">10:10 to 11:30</span>
             <span class="speakerName">Mike Lee</span> - <span class="talkTitle">Hard Ideas</span><br/>
-            <span class="speakerName">Daniel Steinberg</span> - <span class="talkTitle">TBA</span>
+            <span class="speakerName">Daniel Steinberg</span> - <span class="talkTitle">What the func?</span>
           </div>
 
           <div class="session">
             <span class="times">12:00 to 13:20</span>
             <span class="speakerName">Joachim Kurz</span> - <span class="talkTitle">Laziness in Swift</span><br/>
-            <span class="speakerName">Kyle Fuller</span> - <span class="talkTitle">Core Data</span>
+            <span class="speakerName">Kyle Fuller</span> - <span class="talkTitle">ICYMI: Core Data</span>
           </div>
 
           <div class="session">
@@ -129,7 +129,7 @@
           </div>
 
           <div class="session">
-            <span class="times">16:30 to 17:50</span>
+            <span class="times">17:00 to 18:20</span>
             <span class="speakerName">Christine Corbett Moran</span> - <span class="talkTitle">TBA</span><br/>
             <span class="speakerName">Soledad Penades</span> - <span class="talkTitle">Embracing Failure</span>
           </div>
