updated Swift Kickstart details

--- a/swift.html
+++ b/swift.html
@@ -58,35 +58,35 @@
         <div class="centered">
           <h1>Swift Kickstart</h1>
         </div>
-	    		<div class="col-sm-6">
+	    		<div class="centered">
             <div>
               <h2>A workshop by Daniel Steinberg</h2>
               <p style="display: inline-block;"><a href="http://twitter.com/dimsumthinking">
               <img style="border-radius: 50%;" src="assets/img/danielsteinberg.jpg" alt="Daniel Steinberg"></a></p>
-    					<p style="display: inline-block;" class="details">October 21, 2014<br/>Shoreditch, London<br/>
+    					<p style="display: inline-block;" class="details">October 21, 2014<br/>America Square Conference Centre, London<br/>
     					Brought to you by ⌘R Conf<br/>
               </p>
             </div>
-            <p>The Swift Kickstart is a one-day introduction to the Swift programming language for experienced programmers. It acts as a companion to the <a href="https://itunes.apple.com/gb/book/a-swift-kickstart/id891801923?mt=11">Swift Kickstart book.</a><p>
+            <p>The Swift Kickstart is a one-day introduction to the Swift programming language for experienced programmers. It acts as a companion to the <a href="https://itunes.apple.com/gb/book/a-swift-kickstart/id891801923?mt=11">Swift Kickstart book.</a></p>
+            <p>Tickets for this event are no longer on sale.</p>
 					<!-- <img class="iphone-image" src="assets/img/iphone.png" alt=""> -->
 				</div>
-        <div class="col-sm-6">
-          <div id='tito-register-form'></div>
-          <script src='https://ti.to/cmdr/swift-kickstart.js?version=3' type='text/javascript'></script></script>
-          </div>
 			</div>
 		</div><!-- container -->
 	</div><!-- information -->
         
-  <div id="workshop">
+  <div id="venue">
     <div class="container">
-      <div class="row centered">
-        <h1>A Story</h1>
-        <p>This course assumes you're new to Swift, but not to programming.</p>
-
-        <p>For example:<br/>WWDC was filled with announcements, and then Swift happened. But after the initial excitement, you remembered you&#8217;re a professional and you had to continue shipping in the meantime. So whilst you&#8217;ve been leveraging your well-honed programming chops (Objective-C or otherwise), you&#8217;ve still been keeping an eye out and you're curious what Swift has to offer now that it&#8217;s out of beta. This is for you.</p>
-
-          
+      <div class="row centered grid">
+        <h1>Details</h1>
+        <div class="col-sm-6">
+          <p>The Swift Kickstart will be held in <a href="http://shoreditchworks.com/villagehall/">America Square Conference Center</a>, <a href="https://www.google.com/maps/search/1+America+Square+17+Crosswall+London+EC3N+2LB/@51.511473,-0.076839,15z/data=!3m1!4b1">1 America Square, 17 Crosswall, EC3N 2LB</a>.</p>
+          <p>9:30AM - 6PM</p>
+          <p>You will need to bring a Mac OS X laptop with Xcode 6 installed.</p>
+        </div>
+        <div class="col-sm-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d9932.380019240522!2d-0.07683899999999998!3d51.511472999999995!3m2!1i1024!2i768!4f13.1!2m1!1s1+America+Square+17+Crosswall+London+EC3N+2LB!5e0!3m2!1sen!2s!4v1413486624203" width="400" height="300" frameborder="0" style="border:0"></iframe>
+        </div>
       </div>
     </div>
   </div>
