removed tickets and added link to app

--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
 					<img class="iphone-image" src="assets/img/iphone.png" alt="">
 				</div>
         <div class="col-sm-6">
-          <div id='tito-register-form'></div>
-          <script src='https://ti.to/cmdr/cmdrconf.js?version=3' type='text/javascript'></script></script>
-          <p>Both Hero and Standard tickets give you full access to the conference and all related events. Hero tickets are for company-purchased tickets and will allow for the sale of subsidised tickets.</p>
+        <p class="blurb"><a href="https://itunes.apple.com/us/app/cmd-r-conf-app/id928031342?ls=1&mt=8"><img src="assets/img/appstore.svg"></a></p>
+        <p class="blurb">Tickets are no longer on sale.</p>
         </div>
 			</div>
 		</div><!-- container -->
