--- a/info.html
+++ b/info.html
@@ -65,6 +65,7 @@
           <img class="iphone-image" src="assets/img/iphone.png" alt="">
         </div>
         <div class="col-sm-6">
+            <p class="blurb"><a href="https://itunes.apple.com/us/app/cmd-r-conf-app/id928031342?ls=1&mt=8"><img src="assets/img/appstore.svg"></a></p>
             <p class="blurb">⌘R Conf is a two-day, single track conference (plus a hack day) for serious iOS and OS X developers, looking to improve as developers, designers, creators and humans. There will be a focus on deep technical understanding, inclusive design and solving the harder problems we face as an industry.</p>
             <p>Below you will find information about the conference, the venue, and the surrounding areas. We hope you'll find it helpful and make your time at ⌘R Conf even more enjoyable.</p>
         </div>
