--- a/timetable.html
+++ b/timetable.html
@@ -66,6 +66,7 @@
 					<img class="iphone-image" src="assets/img/iphone.png" alt="">
 				</div>
         <div class="col-sm-6">
+            <p class="blurb"><a href="https://itunes.apple.com/us/app/cmd-r-conf-app/id928031342?ls=1&mt=8"><img src="assets/img/appstore.svg"></a></p>
             <p class="blurb">⌘R Conf is a two-day, single track conference (plus a hack day) for serious iOS and OS X developers, looking to improve as developers, designers, creators and humans. There will be a focus on deep technical understanding, inclusive design and solving the harder problems we face as an industry.</p>
             <p>Below you will find the timetable for the main conference days. Go to the <a href="hackday.html">Hack Day</a> page for more details on the third and final day of the conference.</p>
         </div>
@@ -73,16 +74,25 @@
 		</div><!-- container -->
 	</div><!-- information -->
 
-  <div id="speakers">
+  <div id="timetable">
     <div class="container">
 
       <div class="row centered">
         <h1>Timetable</h1>
       </div>
-
       <div class="row centered grid">
         <div class="day col-sm-6">
           <h2>Day 1 (October 22)</h2>
+          <div class="session">
+            <span class="times">9:00 to 10:00</span>
+            <span>Open Doors, Coffee and Registration</span>
+          </div>
+
+          <div class="session">
+            <span class="times">10:00 to 10:10</span>
+            <span>Welcome and Housekeeping</span>
+          </div>
+
           <div class="session">
             <span class="times">10:10 to 11:30</span>
             <span class="speakerName">Mike Lee</span> - <span class="talkTitle">Hard Ideas</span><br/>
@@ -110,6 +120,17 @@
 
         <div class="day col-sm-6">
           <h2>Day 2 (October 23)</h2>
+
+          <div class="session">
+            <span class="times">9:00 to 10:00</span>
+            <span>Open Doors and Coffee</span>
+          </div>
+
+          <div class="session">
+            <span class="times">10:00 to 10:10</span>
+            <span>Welcome and Housekeeping</span>
+          </div>
+
           <div class="session">
             <span class="times">10:10 to 11:30</span>
             <span class="speakerName">Krzysztof Zabłocki</span> - <span class="talkTitle">Empower your Objective-C</span><br/>
