--- a/hackday.html
+++ b/hackday.html
@@ -66,6 +66,7 @@
         <img class="iphone-image" src="assets/img/iphone.png" alt="">
         </div>
         <div class="col-sm-6">
+          <p class="blurb"><a href="https://itunes.apple.com/us/app/cmd-r-conf-app/id928031342?ls=1&mt=8"><img src="assets/img/appstore.svg"></a></p>
           <p class="blurb">The Hack Day is the third and final day of ⌘R Conf. It's a chance to apply some of the ideas that are bound to be fighting to get out by the end of the conference. You'll also get to work with some of the awesome people you'll meet during the conference.</p>
           <p>There will be a couple of fairly structured workshops as well as some more freeform hacking challenges.</p>
         </div>
