--- a/timetable.html
+++ b/timetable.html
@@ -113,8 +113,8 @@
 
           <div class="session">
             <span class="times">17:00 to 18:20</span>
-            <span class="speakerName">Peter Steinberger</span> - <span class="talkTitle">TBA</span><br/>
-            <span class="speakerName">Gwynne Raskind</span> - <span class="talkTitle">The Why and How of Assembly Language</span>
+            <span class="speakerName">Gwynne Raskind</span> - <span class="talkTitle">The Why and How of Assembly Language</span><br/>
+            <span class="speakerName">Peter Steinberger</span> - <span class="talkTitle">Scaling Your Indie Business</span><br/>
           </div>
         </div>
 
