--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 				</div>
         <div class="col-sm-6">
         <p class="blurb"><a href="https://itunes.apple.com/us/app/cmd-r-conf-app/id928031342?ls=1&mt=8"><img src="assets/img/appstore.svg"></a></p>
+        <p class="blurb">⌘R Conf is a two-day, single track conference (plus a hack day) for serious iOS and OS X developers, looking to improve as developers, designers, creators and humans. There will be a focus on deep technical understanding, inclusive design and solving the harder problems we face as an industry.</p>
         <p class="blurb">Tickets are no longer on sale.</p>
         </div>
 			</div>
