--- a/timetable.html
+++ b/timetable.html
@@ -151,7 +151,7 @@
 
           <div class="session">
             <span class="times">17:00 to 18:20</span>
-            <span class="speakerName">Christine Corbett Moran</span> - <span class="talkTitle">TBA</span><br/>
+            <span class="speakerName">Christine Corbett Moran</span> - <span class="talkTitle">Open Source iOS</span><br/>
             <span class="speakerName">Soledad Penades</span> - <span class="talkTitle">Embracing Failure</span>
           </div>
         </div>
