--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+        <script type="text/javascript">
+    window._tpm = window._tpm || [];
+    window._tpm['paywallID'] = '61417896';
+    window._tpm['trackPageview'] = true;
+</script>
+<script type="text/javascript" src="http://code.tinypass.com/tpl/d1/tpm.js"></script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
