--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-        <script type="text/javascript">
-    window._tpm = window._tpm || [];
-    window._tpm['paywallID'] = '61417896';
-    window._tpm['trackPageview'] = true;
-</script>
-<script type="text/javascript" src="http://code.tinypass.com/tpl/d1/tpm.js"></script>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,6 +41,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Home</a></li>
+          <li><a href="live.html">Watch Live</a></li>
           <li><a href="timetable.html">Timetable</a></li>
           <li><a href="info.html">Info</a></li>
           <li><a href="hackday.html">Hack Day</a></li>
@@ -75,7 +69,7 @@
         <div class="col-sm-6">
         <p class="blurb"><a href="https://itunes.apple.com/us/app/cmd-r-conf-app/id928031342?ls=1&mt=8"><img src="assets/img/appstore.svg"></a></p>
         <p class="blurb">⌘R Conf is a two-day, single track conference (plus a hack day) for serious iOS and OS X developers, looking to improve as developers, designers, creators and humans. There will be a focus on deep technical understanding, inclusive design and solving the harder problems we face as an industry.</p>
-        <p class="blurb">Tickets are no longer on sale.</p>
+        <p class="blurb"><a href="live.html">We're live! Watch it here.</a></p>
         </div>
 			</div>
 		</div><!-- container -->
