--- a/inclusivity.html
+++ b/inclusivity.html
@@ -40,6 +40,8 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
+          <li><a href="live.html">Watch Live</a></li>
+          <li><a href="timetable.html">Timetable</a></li>
           <li><a href="info.html">Info</a></li>
           <li><a href="hackday.html">Hack Day</a></li>
           <li><a href="swift.html">Swift Workshop</a></li>
