--- a/info.html
+++ b/info.html
@@ -41,6 +41,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
+          <li><a href="live.html">Watch Live</a></li>
           <li><a href="timetable.html">Timetable</a></li>
           <li><a href="#">Info</a></li>
           <li><a href="hackday.html">Hack Day</a></li>
