--- a/live.html
+++ b/live.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+        <script type="text/javascript">
+    window._tpm = window._tpm || [];
+    window._tpm['paywallID'] = '61417896';
+    window._tpm['trackPageview'] = true;
+</script>
+<script type="text/javascript" src="http://code.tinypass.com/tpl/d1/tpm.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,11 +47,11 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
-          <li><a href="live.html">Watch Live</a></li>
+          <li><a href="#">Watch Live</a></li>
           <li><a href="timetable.html">Timetable</a></li>
           <li><a href="info.html">Info</a></li>
           <li><a href="hackday.html">Hack Day</a></li>
-          <li><a href="#">Swift Workshop</a></li>
+          <li><a href="swift.html">Swift Workshop</a></li>
           <li><a href="#f">Contact Us</a></li>
         </ul>
       </div>
@@ -57,40 +63,12 @@
 		<div class="container">
 			<div class="row">
         <div class="centered">
-          <h1>Swift Kickstart</h1>
+          <h1>⌘R Conf Live</h1>
+          <iframe src="http://new.livestream.com/accounts/7925260/events/3513457/player?width=560&height=315&autoPlay=true&mute=false" width="560" height="315" frameborder="0" scrolling="no"> </iframe>
         </div>
-	    		<div class="centered">
-            <div>
-              <h2>A workshop by Daniel Steinberg</h2>
-              <p style="display: inline-block;"><a href="http://twitter.com/dimsumthinking">
-              <img style="border-radius: 50%;" src="assets/img/danielsteinberg.jpg" alt="Daniel Steinberg"></a></p>
-    					<p style="display: inline-block;" class="details">October 21, 2014<br/>America Square Conference Centre, London<br/>
-    					Brought to you by ⌘R Conf<br/>
-              </p>
-            </div>
-            <p>The Swift Kickstart is a one-day introduction to the Swift programming language for experienced programmers. It acts as a companion to the <a href="https://itunes.apple.com/gb/book/a-swift-kickstart/id891801923?mt=11">Swift Kickstart book.</a></p>
-            <p>Tickets for this event are no longer on sale.</p>
-					<!-- <img class="iphone-image" src="assets/img/iphone.png" alt=""> -->
-				</div>
 			</div>
 		</div><!-- container -->
 	</div><!-- information -->
-        
-  <div id="venue">
-    <div class="container">
-      <div class="row centered grid">
-        <h1>Details</h1>
-        <div class="col-sm-6">
-          <p>The Swift Kickstart will be held in <a href="http://shoreditchworks.com/villagehall/">America Square Conference Center</a>, <a href="https://www.google.com/maps/search/1+America+Square+17+Crosswall+London+EC3N+2LB/@51.511473,-0.076839,15z/data=!3m1!4b1">1 America Square, 17 Crosswall, EC3N 2LB</a>.</p>
-          <p>9:30AM - 6PM</p>
-          <p>You will need to bring a Mac OS X laptop with Xcode 6 installed.</p>
-        </div>
-        <div class="col-sm-6">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d9932.380019240522!2d-0.07683899999999998!3d51.511472999999995!3m2!1i1024!2i768!4f13.1!2m1!1s1+America+Square+17+Crosswall+London+EC3N+2LB!5e0!3m2!1sen!2s!4v1413486624203" width="400" height="300" frameborder="0" style="border:0"></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <div id="contact">
     <div class="container">
