--- a/timetable.html
+++ b/timetable.html
@@ -41,6 +41,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
+          <li><a href="live.html">Watch Live</a></li>
           <li><a href="#">Timetable</a></li>
           <li><a href="info.html">Info</a></li>
           <li><a href="hackday.html">Hack Day</a></li>
