--- a/timetable.html
+++ b/timetable.html
@@ -114,7 +114,7 @@
 
           <div class="session">
             <span class="times">17:00 to 18:20</span>
-            <span class="speakerName">Gwynne Raskind</span> - <span class="talkTitle">The Why and How of Assembly Language</span><br/>
+            <span class="speakerName">Matt Galloway</span> - <span class="talkTitle">Strings: From 0 to</span> 🐓🍟<br/>
             <span class="speakerName">Peter Steinberger</span> - <span class="talkTitle">Scaling Your Indie Business</span><br/>
           </div>
         </div>
@@ -141,7 +141,7 @@
           <div class="session">
             <span class="times">12:00 to 13:20</span>
             <span class="speakerName">Sam Marshall</span> - <span class="talkTitle">Everything is Terrible</span><br/>
-            <span class="speakerName">Matt Galloway</span> - <span class="talkTitle">Strings: From 0 to</span> 🐓🍟
+            <span class="speakerName">Gwynne Raskind</span> - <span class="talkTitle">The Why and How of Assembly Language</span><br/>
           </div>
 
           <div class="session">
