--- a/timetable.html
+++ b/timetable.html
@@ -134,20 +134,20 @@
 
           <div class="session">
             <span class="times">10:10 to 11:30</span>
+            <span class="speakerName">Chris Eidhof</span> - <span class="talkTitle">Functional Swift</span><br/>
             <span class="speakerName">Krzysztof Zabłocki</span> - <span class="talkTitle">Empower your Objective-C</span><br/>
-            <span class="speakerName">Chris Eidhof</span> - <span class="talkTitle">Functional Swift</span>
           </div>
 
           <div class="session">
             <span class="times">12:00 to 13:20</span>
-            <span class="speakerName">Sam Marshall</span> - <span class="talkTitle">Everything is Terrible</span><br/>
             <span class="speakerName">Gwynne Raskind</span> - <span class="talkTitle">The Why and How of Assembly Language</span><br/>
+            <span class="speakerName">Michael May</span> - <span class="talkTitle">Monocultural</span><br/>
           </div>
 
           <div class="session">
             <span class="times">15:00 to 16:20</span>
             <span class="talkTitle">Lightning Talks</span><br/>
-            <span class="speakerName">Michael May</span> - <span class="talkTitle">Monocultural</span><br/>
+            <span class="speakerName">Sam Marshall</span> - <span class="talkTitle">Everything is Terrible</span><br/>
           </div>
 
           <div class="session">
