--- a/hack.html
+++ b/hack.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="https://ti.to/cmdr/hack-day">
+<meta http-equiv="refresh" content="0;URL=https://ti.to/cmdr/hack-day">
 </head>
 </html>
