removed all teh things

--- a/index.html
+++ b/index.html
@@ -41,11 +41,6 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Home</a></li>
-          <li><a href="live.html">Watch Live</a></li>
-          <li><a href="timetable.html">Timetable</a></li>
-          <li><a href="info.html">Info</a></li>
-          <li><a href="hackday.html">Hack Day</a></li>
-          <li><a href="swift.html">Swift Workshop</a></li>
           <li><a href="#f">Contact Us</a></li>
         </ul>
       </div>
@@ -67,9 +62,7 @@
 					<img class="iphone-image" src="assets/img/iphone.png" alt="">
 				</div>
         <div class="col-sm-6">
-        <p class="blurb"><a href="https://itunes.apple.com/us/app/cmd-r-conf-app/id928031342?ls=1&mt=8"><img src="assets/img/appstore.svg"></a></p>
-        <p class="blurb">⌘R Conf is a two-day, single track conference (plus a hack day) for serious iOS and OS X developers, looking to improve as developers, designers, creators and humans. There will be a focus on deep technical understanding, inclusive design and solving the harder problems we face as an industry.</p>
-        <p class="blurb"><a href="live.html">We're live! Watch it here.</a></p>
+        <p class="blurb">⌘R Conf is over! Thank you so much to everyone who have helped make it so fantastic.</p>
         </div>
 			</div>
 		</div><!-- container -->
@@ -80,6 +73,7 @@
 
       <div class="row centered">
         <h1>Speakers</h1>
+        <p>Thank you to all our fantastic speakers!</p>
       </div>
 
       <div class="row centered grid">
@@ -212,6 +206,19 @@
       </div> <!-- row -->
     </div> <!-- container -->
   </div> <!-- speakers -->
+
+  <div id="sponsors">
+    <div class="container">
+      <div class="row centered">
+        <h1>Sponsors</h1>
+        <p>Thank you to our sponsors</p>
+        <p><img src="assets/img/facebook.png" class="big-sponsor"></p>
+        <p><img src="assets/img/badoo.png" class="big-sponsor"></p>
+        <p><img src="assets/img/lyst.png" class="small-sponsor">
+         <img src="assets/img/shinobi.png" class="small-sponsor"></p>
+      </div>
+    </div>
+  </div>
 
   <div id="contact">
     <div class="container">
